final minors
